--- a/hugo.yaml
+++ b/hugo.yaml
@@ -72,6 +72,10 @@ params:
   rss:
     sections: blog docs
 
+  page:
+    # full (100%), wide (90rem), normal (1280px)
+    width: wide
+
 author:
   email: robert@rthomasv3.xyz
   name: Robert Thomas
